# mixture_of_agents

./: .gitignore  Makefile  README.md  __init__.py  __main__.py  core.py  llm.py  prompts.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_core.py  test_llm.py  test_prompts.py
