[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mixture_of_agents"
version = "0.1.0"
description = "Mixture-of-Agents (Wang et al., 2024) from scratch: layered propose-and-aggregate over LLMs. Zero deps, backend-agnostic."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []   # zero third-party deps — pure stdlib + OpenAI-compatible HTTP

[project.scripts]
mixture_of_agents = "mixture_of_agents.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mixture_of_agents*"]

[tool.setuptools.package-data]
mixture_of_agents = ["py.typed"]
